keep-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keep-frontend-service
spec:
  selector:
    app: keep-frontend
  ports:
  - port: 3000
    targetPort: http-port
  type: NodePort
#  type: LoadBalancer
