keep-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: keepfrontend.ravigooglekeep.ga
    http:
      paths:
      - backend:
          serviceName: keep-frontend-service
          servicePort: 3000
